--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@strapi/provider-upload-cloudinary": "^4.8.2",
     "@strapi/strapi": "4.8.2",
     "better-sqlite3": "8.0.1",
+    "pg-connection-string": "^2.5.0",
     "strapi-plugin-google-map-picker": "^1.0.8",
     "strapi-provider-email-smtp": "^1.0.3"
   },
