--- a/package.json
+++ b/package.json
@@ -19,7 +19,14 @@
     "pg": "8.5",
     "pg-connection-string": "^2.5.0",
     "strapi-plugin-google-map-picker": "^1.0.8",
-    "strapi-provider-email-smtp": "^1.0.3"
+    "strapi-provider-email-smtp": "^1.0.3",
+    "@ckeditor/ckeditor5-react": "^6.0.0",
+    "@strapi/design-system": "^1.6.3",
+    "@strapi/helper-plugin": "^4.6.0",
+    "@strapi/icons": "^1.6.3",
+    "ckeditor5-build-classic-all-plugin": "^16.0.6",
+    "ckeditor5-build-full-plugins": "^12.0.7",
+    "prop-types": "^15.7.2"
   },
   "author": {
     "name": "A Strapi developer"
