--- a/package.json
+++ b/package.json
@@ -10,23 +10,24 @@
     "strapi": "strapi"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-react": "^6.0.0",
+    "@strapi/design-system": "^1.6.3",
+    "@strapi/helper-plugin": "^4.6.0",
+    "@strapi/icons": "^1.6.3",
     "@strapi/plugin-i18n": "4.8.2",
     "@strapi/plugin-users-permissions": "4.8.2",
     "@strapi/provider-email-sendgrid": "^4.8.2",
     "@strapi/provider-upload-cloudinary": "^4.8.2",
     "@strapi/strapi": "4.8.2",
     "better-sqlite3": "8.0.1",
-    "pg": "8.5",
-    "pg-connection-string": "^2.5.0",
-    "strapi-plugin-google-map-picker": "^1.0.8",
-    "strapi-provider-email-smtp": "^1.0.3",
-    "@ckeditor/ckeditor5-react": "^6.0.0",
-    "@strapi/design-system": "^1.6.3",
-    "@strapi/helper-plugin": "^4.6.0",
-    "@strapi/icons": "^1.6.3",
     "ckeditor5-build-classic-all-plugin": "^16.0.6",
     "ckeditor5-build-full-plugins": "^12.0.7",
-    "prop-types": "^15.7.2"
+    "pg": "8.5",
+    "pg-connection-string": "^2.5.0",
+    "prop-types": "^15.7.2",
+    "strapi-plugin-google-map-picker": "^1.0.8",
+    "strapi-plugin-populate-deep": "^2.0.0",
+    "strapi-provider-email-smtp": "^1.0.3"
   },
   "author": {
     "name": "A Strapi developer"
